# demiarch

./: .gitignore  ADDITIONAL_ISSUES.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  SECURITY_FIXES.md  deny.toml  install-gui-deps.sh  package-lock.json
.beads/: issues.jsonl
crates/demiarch-cli/: Cargo.toml
crates/demiarch-cli/src/: main.rs  main_tests.rs
crates/demiarch-cli/tests/: cli_integration_tests.rs  main_tests.rs
crates/demiarch-core/: Cargo.toml
crates/demiarch-core/src/: agents_tests.rs  commands_tests.rs  config_tests.rs  context_tests.rs  cost_tests.rs  error.rs  error_tests.rs  hooks_tests.rs  lib.rs  llm_tests.rs  routing_tests.rs  skills_tests.rs  storage_tests.rs
crates/demiarch-core/src/agents/: code_extraction.rs  coder.rs  context.rs  events.rs  message_builder.rs  mod.rs  orchestrator.rs  planner.rs  reviewer.rs  status.rs  tester.rs  tool.rs  traits.rs
crates/demiarch-core/src/api/: costs.rs  features.rs  health.rs  mod.rs  projects.rs  sessions.rs
crates/demiarch-core/src/application/: errors.rs  mod.rs
crates/demiarch-core/src/application/services/: chat_service.rs  document_service.rs  feature_service.rs  mod.rs  phase_service.rs  planning_service.rs  project_service.rs
crates/demiarch-core/src/application/validators/: feature_validator.rs  mod.rs  phase_validator.rs  plan_validator.rs  project_validator.rs
crates/demiarch-core/src/commands/: chat.rs  checkpoint.rs  document.rs  feature.rs  generate.rs  graph.rs  image.rs  mod.rs  phase.rs  planner.rs  project.rs  skills.rs  sync.rs
crates/demiarch-core/src/config/: mod.rs
crates/demiarch-core/src/context/: mod.rs
crates/demiarch-core/src/cost/: mod.rs
crates/demiarch-core/src/domain/: mod.rs  specification.rs
crates/demiarch-core/src/domain/events/: mod.rs
crates/demiarch-core/src/domain/feature_decomposition/: mod.rs  parser.rs  strategy.rs  task.rs
crates/demiarch-core/src/domain/knowledge/: enricher.rs  entity.rs  event.rs  extractor.rs  mod.rs  relationship.rs  repository.rs  search.rs  service.rs
crates/demiarch-core/src/domain/locking/: event.rs  guard.rs  manager.rs  mod.rs  types.rs
crates/demiarch-core/src/domain/memory/: embedding.rs  error.rs  full.rs  index.rs  mod.rs  persistent.rs  timeline.rs
crates/demiarch-core/src/domain/recovery/: checkpoint.rs  edit_detection.rs  event.rs  manager.rs  mod.rs  repository.rs  repository_trait.rs  restore.rs  signing.rs
crates/demiarch-core/src/domain/search/: entity.rs  event.rs  mod.rs  repository.rs  repository_trait.rs  service.rs  specification.rs
crates/demiarch-core/src/domain/security/: entity.rs  event.rs  mod.rs  service.rs
crates/demiarch-core/src/domain/session/: event.rs  locked_manager.rs  manager.rs  mod.rs  repository.rs  repository_trait.rs  session.rs  shutdown.rs
crates/demiarch-core/src/domain/skills/: entity.rs  extraction.rs  mod.rs  validation.rs
crates/demiarch-core/src/hooks/: mod.rs
crates/demiarch-core/src/image/: client.rs  mod.rs  models.rs  operations.rs  types.rs
crates/demiarch-core/src/infrastructure/: mod.rs
crates/demiarch-core/src/infrastructure/chat/: mod.rs  repository.rs
crates/demiarch-core/src/infrastructure/document/: mod.rs  repository.rs
crates/demiarch-core/src/infrastructure/knowledge/: mod.rs  repository.rs
crates/demiarch-core/src/infrastructure/llm/: client.rs  mod.rs
crates/demiarch-core/src/infrastructure/security/: keyring.rs
crates/demiarch-core/src/llm/: client.rs  mod.rs  streaming.rs  types.rs
crates/demiarch-core/src/routing/: bandit.rs  mod.rs  router.rs  store.rs  types.rs
crates/demiarch-core/src/skills/: extractor.rs  mod.rs  store.rs  types.rs
crates/demiarch-core/src/storage/: database.rs  jsonl.rs  migrations.rs  mod.rs
crates/demiarch-core/src/visualization/: mod.rs  tree.rs  widget.rs
crates/demiarch-core/tests/: integration_tests.rs
crates/demiarch-gui/: Cargo.toml  tauri.conf.json
crates/demiarch-gui/src/: commands.rs  main.rs
crates/demiarch-plugins/: Cargo.toml
crates/demiarch-plugins/src/: lib.rs  lib_tests.rs  license.rs  loader.rs  registry.rs  sandbox.rs
crates/demiarch-tui/: Cargo.toml
crates/demiarch-tui/src/: main.rs  main_tests.rs
demiarch/: Cargo.toml  deny.toml
demiarch/.cargo/: audit.toml
demiarch/demiarch-cli/: Cargo.toml
demiarch/demiarch-cli/src/: main.rs
demiarch/demiarch-core/: Cargo.toml
demiarch/demiarch-core/src/: lib.rs
demiarch/demiarch-core/src/application/: db.rs  external.rs  git.rs  llm.rs  mod.rs  repositories.rs  services.rs  use_cases.rs  wasm.rs
demiarch/demiarch-core/src/domain/: mod.rs
demiarch/demiarch-core/src/domain/agents/: entity.rs  mod.rs  repository.rs  service.rs
demiarch/demiarch-core/src/domain/code_generation/: entity.rs  mod.rs  repository.rs  service.rs
demiarch/demiarch-core/src/domain/context/: entity.rs  mod.rs  repository.rs  service.rs
demiarch/demiarch-core/src/domain/cost/: entity.rs  mod.rs  repository.rs  service.rs
demiarch/demiarch-core/src/infrastructure/: db.rs  external.rs  git.rs  llm.rs  mod.rs  repositories.rs  services.rs  use_cases.rs  wasm.rs
demiarch/demiarch-core/src/interfaces/: db.rs  external.rs  git.rs  llm.rs  mod.rs  repositories.rs  services.rs  use_cases.rs  wasm.rs
demiarch/demiarch-core/tests/: database_integration.rs  key_storage_integration.rs
demiarch/demiarch-gui/: Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json
demiarch/demiarch-gui/layout-mockups/: 01-classic-sidebar.html  02-command-center.html  03-floating-panels.html  04-dual-sidebar.html  05-tabbed-workspace.html  06-split-screen.html  07-dashboard.html  08-overlay-modal.html  09-horizontal-bands.html  10-focus-hud.html  index.html
demiarch/demiarch-gui/src/: App.css  App.tsx  main.rs
demiarch/demiarch-gui/src-tauri/src/: lib.rs  main.rs
demiarch/demiarch-gui/src/contexts/: AgentContext.tsx  ConflictContext.tsx  ProjectContext.tsx
demiarch/demiarch-gui/src/data/: sampleAgents.ts  sampleProjects.ts
demiarch/demiarch-gui/src/types/: project.ts
(+185 files in other folders)
