[workspace]
resolver = "2"
members = [
    "crates/demiarch-core",
    "crates/demiarch-cli",
    "crates/demiarch-tui",
    "crates/demiarch-plugins",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Demiarch Contributors"]
repository = "https://github.com/demiarch/demiarch"
description = "Local-first AI app builder"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# Async streams
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# Random
rand = "0.8"
rand_distr = "0.4"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
toml = "0.8"

# Security
aes-gcm = "0.10"
ed25519-dalek = "2.1"
sha2 = "0.10"
base64 = "0.22"
rand_chacha = "0.3"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
keyring = "2.3"
hex = "0.4"
async-trait = "0.1"

# Git
git2 = "0.19"

# System
gethostname = "0.5"

# Testing
tempfile = "3.10"

# Caching
# WASM (for plugins)
wasmtime = "38.0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
