[workspace]
members = [
    "demiarch-core",
    "demiarch-cli", 
    "demiarch-gui",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies available to all workspace members
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
dirs = "5"