[package]
name = "demiarch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Demiarch - local-first AI app builder"

[[bin]]
name = "demiarch"
path = "src/main.rs"

[dependencies]
demiarch-core = { path = "../demiarch-core" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
