[package]
name = "demiarch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Demiarch - commands, agents, and storage"

[features]
integration-tests = []

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
aes-gcm.workspace = true
ed25519-dalek.workspace = true
git2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
