[package]
name = "demiarch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Demiarch - commands, agents, and storage"

[features]
integration-tests = []

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
futures-core.workspace = true
futures-util.workspace = true
async-stream.workspace = true
aes-gcm.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
git2.workspace = true
gethostname.workspace = true
dirs.workspace = true
toml.workspace = true
base64.workspace = true
rand_chacha.workspace = true
zeroize.workspace = true
keyring.workspace = true
hex.workspace = true
async-trait.workspace = true
rand.workspace = true
rand_distr.workspace = true
ratatui.workspace = true
image.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
