[package]
name = "demiarch-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin system for Demiarch - WASM sandboxing, loading, and licensing"

[dependencies]
demiarch-core = { path = "../demiarch-core" }
tokio.workspace = true
wasmtime.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2.workspace = true
base64.workspace = true
dirs.workspace = true
