[package]
name = "demiarch-cli"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "CLI interface for Demiarch"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# CLI-specific dependencies
clap = { version = "4.5", features = ["derive"] }
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = "0.29"

# Internal dependency
demiarch-core = { path = "../demiarch-core" }