[package]
name = "demiarch-gui"
version = "0.1.0"
license = "AGPL-3.0-or-later"
description = "GUI interface for Demiarch using Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "demiarch_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src-tauri/src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# GUI-specific dependencies
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
sqlx = { workspace = true }
dirs = "5.0"

# Internal dependency
demiarch-core = { path = "../demiarch-core" }

